--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,12 @@
 	<url>http://maven.apache.org</url>
 	
 	<properties>
-		<docker.image.prefix>kammana</docker.image.prefix>
-		<sonar.host.url>http://44.202.108.97:9000/</sonar.host.url>
+		
+                  <maven.compiler.source>1.8</maven.compiler.source>
+                  <maven.compiler.target>1.8</maven.compiler.target>
+
+		//<docker.image.prefix>kammana</docker.image.prefix>
+		//<sonar.host.url>http://44.202.108.97:9000/</sonar.host.url>
 
 	</properties>
 	<dependencies>
