--- a/pom.xml
+++ b/pom.xml
@@ -8,20 +8,14 @@
 	<name>Java Home myweb</name>
 	<url>http://maven.apache.org</url>
 
-	<properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
-</properties>
-	
-	//<properties>	
+		<properties>	
 		
                  
-		//<docker.image.prefix>kammana</docker.image.prefix>
-		//<sonar.host.url>http://44.202.108.97:9000/</sonar.host.url>
+		<docker.image.prefix>kammana</docker.image.prefix>
+		<sonar.host.url>http://44.202.108.97:9000/</sonar.host.url>
 
-	//</properties>
-	//<dependencies>
+	</properties>
+	<dependencies>
 
 		
 		<dependency>
